BDT-26 Gift Wrap fixed

--- a/skin/frontend/eco/default/less/base.less
+++ b/skin/frontend/eco/default/less/base.less
@@ -757,10 +757,12 @@ table[class*='data-table'] {
   &> thead, &> tbody, &> tfoot {
     &> tr {
       &> th, &> td {
-        padding: 8px;
+        padding: 5px 8px;
         line-height: 1.42857143;
-        vertical-align: top;
-        border-top: 1px solid #dae2ea;
+        vertical-align: middle;
+        border: 0;
+        font-weight: bold;
+        text-transform: uppercase;
       }
     }
   }
